--- a/.github/workflows/update-subscribers.yml
+++ b/.github/workflows/update-subscribers.yml
@@ -2,36 +2,31 @@ name: Update YouTube Subscribers
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # Run daily at midnight
-  workflow_dispatch:      # Allow manual trigger
+    - cron: '0 0 * * *'  # Runs daily at midnight
+  workflow_dispatch:      # Allows manual trigger
 
 jobs:
   update-subscribers:
     runs-on: ubuntu-latest
-    
     steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 1
-          
+      - uses: actions/checkout@v3
+      
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: '3.x'
           
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install google-api-python-client python-dotenv
+          pip install beautifulsoup4 requests fake-useragent
           
       - name: Update subscriber counts
-        env:
-          YOUTUBE_API_KEY: ${{ secrets.YOUTUBE_API_KEY }}
         run: python .github/scripts/update_subscribers.py
-        
+          
       - name: Commit and push if changed
         run: |
           git config --global user.name 'GitHub Action'
           git config --global user.email 'action@github.com'
-          git add categories/*.md
+          git add -A
           git diff --quiet && git diff --staged --quiet || (git commit -m "Update YouTube subscriber counts" && git push)
