--- a/.github/workflows/update-subscribers.yml
+++ b/.github/workflows/update-subscribers.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install beautifulsoup4 requests fake-useragent markdown
+          pip install beautifulsoup4 requests fake-useragent
           
       - name: Update subscriber counts
         run: python .github/scripts/update_subscribers.py
