--- a/.github/workflows/update-youtube-metrics.yml
+++ b/.github/workflows/update-youtube-metrics.yml
@@ -11,12 +11,12 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
-          python-version: '3.8'
+          python-version: '3.11'
 
       - name: Install dependencies
         run: |
@@ -25,4 +25,11 @@ jobs:
 
       - name: Update YouTube metrics
         run: |
-          python scripts/update_metrics.py 
+          python scripts/update_metrics.py
+
+      - name: Commit and push if changed
+        run: |
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          git add -A
+          git diff --quiet && git diff --staged --quiet || (git commit -m "📊 Update channel statistics" && git push)
