--- a/.github/workflows/update-subscribers.yml
+++ b/.github/workflows/update-subscribers.yml
@@ -1,39 +1,39 @@
-name: Update YouTube Subscribers
-
-on:
-  push:
-    branches: [ main, master ]  # Triggers on push to main branches
-  schedule:
-    - cron: '0 0 * * *'  # Still keeps daily updates
-  workflow_dispatch:      # Allows manual trigger
-
-permissions:
-  contents: write        # Explicitly allow writing to repository
-
-jobs:
-  update-subscribers:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0  # Fetch all history for proper updates
-      
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
-          
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install beautifulsoup4 requests fake-useragent
-          
-      - name: Update subscriber counts
-        run: python .github/scripts/update_subscribers.py
-          
-      - name: Commit and push if changed
-        run: |
-          git config --global user.name 'github-actions[bot]'
-          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git add -A
-          git diff --quiet && git diff --staged --quiet || (git commit -m "📊 Update channel statistics" && git push)
+# name: Update YouTube Subscribers
+#
+# on:
+#   push:
+#     branches: [ main, master ]  # Triggers on push to main branches
+#   schedule:
+#     - cron: '0 0 * * *'  # Still keeps daily updates
+#   workflow_dispatch:      # Allows manual trigger
+#
+# permissions:
+#   contents: write        # Explicitly allow writing to repository
+#
+# jobs:
+#   update-subscribers:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v3
+#         with:
+#           fetch-depth: 0  # Fetch all history for proper updates
+#       
+#       - name: Set up Python
+#         uses: actions/setup-python@v4
+#         with:
+#           python-version: '3.11'
+#           
+#       - name: Install dependencies
+#         run: |
+#           python -m pip install --upgrade pip
+#           pip install beautifulsoup4 requests fake-useragent
+#           
+#       - name: Update subscriber counts
+#         run: python .github/scripts/update_subscribers.py
+#           
+#       - name: Commit and push if changed
+#         run: |
+#           git config --global user.name 'github-actions[bot]'
+#           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+#           git add -A
+#           git diff --quiet && git diff --staged --quiet || (git commit -m "📊 Update channel statistics" && git push)
