--- a/.github/workflows/update-youtube-metrics.yml
+++ b/.github/workflows/update-youtube-metrics.yml
@@ -1,35 +1,35 @@
-name: Update YouTube Metrics
+# name: Update YouTube Metrics
 
-on:
-  schedule:
-    - cron: '0 0 * * *' # Ejecutar diariamente a la medianoche
-  workflow_dispatch: # Permitir ejecución manual
+# on:
+#   schedule:
+#     - cron: '0 0 * * *' # Ejecutar diariamente a la medianoche
+#   workflow_dispatch: # Permitir ejecución manual
 
-jobs:
-  update-metrics:
-    runs-on: ubuntu-latest
+# jobs:
+#   update-metrics:
+#     runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+#     steps:
+#       - name: Checkout repository
+#         uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
+#       - name: Set up Python
+#         uses: actions/setup-python@v4
+#         with:
+#           python-version: '3.11'
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install requests beautifulsoup4
+#       - name: Install dependencies
+#         run: |
+#           python -m pip install --upgrade pip
+#           pip install requests beautifulsoup4
 
-      - name: Update YouTube metrics
-        run: |
-          python scripts/update_metrics.py
+#       - name: Update YouTube metrics
+#         run: |
+#           python scripts/update_metrics.py
 
-      - name: Commit and push if changed
-        run: |
-          git config --global user.name 'github-actions[bot]'
-          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git add -A
-          git diff --quiet && git diff --staged --quiet || (git commit -m "📊 Update channel statistics" && git push)
+#       - name: Commit and push if changed
+#         run: |
+#           git config --global user.name 'github-actions[bot]'
+#           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+#           git add -A
+#           git diff --quiet && git diff --staged --quiet || (git commit -m "📊 Update channel statistics" && git push)
