Fix workflow permissions for issue and PR automation

--- a/.github/workflows/validate-pr.yml
+++ b/.github/workflows/validate-pr.yml
@@ -9,6 +9,11 @@ on:
       - 'English-Channels.md'
       - '**.md'
 
+permissions:
+  issues: write
+  contents: read
+  pull-requests: write
+
 jobs:
   validate-content:
     runs-on: ubuntu-latest
