--- a/.github/workflows/handle-channel-issue.yml
+++ b/.github/workflows/handle-channel-issue.yml
@@ -4,6 +4,11 @@ on:
   issues:
     types: [opened, edited]
 
+permissions:
+  issues: write
+  contents: read
+  pull-requests: write
+
 jobs:
   process-channel-suggestion:
     runs-on: ubuntu-latest
